--- a/public/index.html
+++ b/public/index.html
@@ -45,13 +45,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <!-- <script>
+  <script>
     if ('serviceWorker' in navigator) {
      windown.addEventListener('load', function() {
       navigator.serviceWorker.register('/serviceWorker.js');
      });
     }
-  </script> -->
+  </script>
 </body>
 
 </html>
